infra/terraform/env/internal/eu-central-1/security_groups/main.tf
resource "aws_security_group" "common" {
  name        = "${var.environment}-common"
  description = "Common security group"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-common"
  }
}

resource "aws_security_group" "drone" {
  name        = "${var.environment}-drone"
  description = "Drone.io security group"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-drone"
  }
}

resource "aws_security_group" "ervcp" {
  name        = "${var.environment}-ervcp"
  description = "ERVCP security group"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 6443
    to_port     = 6443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-ervcp"
  }
}

resource "aws_security_group" "k3s" {
  name        = "${var.environment}-k3s"
  description = "k3s security group"

  ingress {
    from_port = 6443
    to_port   = 6443
    protocol  = "tcp"
    self      = true
  }

  tags = {
    Name = "${var.environment}-k3s"
  }
}
